<resources>
    <string name="app_name">Aplikasi Kontak</string>
    <string name="title_contact">Contact</string>
    <string name="title_calender">Calender</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_seting">Seting</string>
    <string name="title_edit">Edit</string>
    <string name="title_save">Save</string>
    <string name="title_user">tanjiro_kam</string>
    <string name="nama">Nama</string>
    <string name="phone">Phone</string>
    <string name="dummyphone">081297205193</string>
    <string name="email">Email</string>
    <string name="dummyemail">septe.1991@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
