<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_contact">

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.example.aplikasikontak.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_calender"
        android:name="com.example.aplikasikontak.ui.calender.CalenderFragment"
        android:label="@string/title_calender"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.example.aplikasikontak.ui.inbox.InboxFragment"
        android:label="@string/title_inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.aplikasikontak.ui.setting.SettingFragment"
        android:label="@string/title_seting"
        tools:layout="@layout/fragment_setting" />
</navigation>